# streams-of-consciousness

./: .gitignore  README.md  pyproject.toml
app/: app.py  distributor_report_analysis.py  logic.py  plotting.py
cache/: cpi_cache.json
config/: logging_config.json
data/: partner_details.csv  partner_map.csv  partner_map_simplified.csv
data/sample_data/: generate_sample_data.py  sample_data_cd_baby.txt
data/streaming_services/: partner_map.csv  partner_map_simplified.csv
src/: caching.py  data_loader.py  data_processor.py  enums.py  generate_sample_data.py  inflation.py  logger.py  main.py  mycpi.py  plotting.py  streamlit_app.py  streamlit_app_old.py  streamlit_app_v2.py  utils.py
