[tool.poetry]
name = "stream-of-consciousness"
version = "0.1.0"
description = "Tool for musicians to track pay-per-stream (PPS) rates for various streaming platforms over time"
authors = ["Jon Stelman <jon@jonstelman.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"
packages = [{include = "stream_of_consciousness"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
numpy = "^1.25.0"
bokeh = "^3.1.1"
cpi = "^1.0.19"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
