[tool.poetry]
name = "streams-of-consciousness"
version = "0.1.0"
description = "Tool for musicians to track pay-per-stream (PPS) rates for various streaming platforms over time"
authors = ["Jon Stelman <jon@jonstelman.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"
pandas = "^2.0.2"
numpy = "^1.25.0"
bokeh = "2.4.3"
click = "^8.1.3"
streamlit = "^1.23.1"
streamlit-echarts = "^0.4.0"
watchdog = "^3.0.0"
ipykernel = "^6.29.4"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"